--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
           <img src="./img/banner.jpg" alt="Learn something new everyday">
         </div>
         <div class="banner-content">
-          <h1>Learn something new everyday</h1>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-          <a class="btn" href="#">Start Here</a>
+            <div class="banner-block">
+            <h1>Learn something new everyday</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+            <a class="btn" href="#">Start Here</a>
+          </div>
         </div> <!-- End Feature -->
 
     </section>
@@ -80,16 +82,16 @@
     <section id="oncampus">
 
         <div class="feature-image">
-          <img src="" alt="">
-          <h3>It doesn't hurt to keep practing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <span>Emanuel, Sr Strategist at Hiring.com</span>
+          <img src="./img/information-main.jpg" alt="Main Information">
+          <h2>It doesn't hurt to keep practing</h2>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+          <span><br>Emanuel, Sr Strategist at Hiring.com</span>
         </div> <!-- End Feature -->
 
         <div class="feature-content">
-          <div class="aside-block">
+          <div class="block">
             <div class="image">
-              <img src="" alt="">
+              <img src="./img/information-orientation.jpg" alt="Orientation Date">
             </div>
             <div class="content">
               <h3>Orientation date</h3>
@@ -98,9 +100,9 @@
             </div>
           </div> <!-- End Block -->
 
-          <div class="aside-block">
+          <div class="block">
             <div class="image">
-              <img src="" alt="">
+              <img src="./img/information-campus.jpg" alt="Our Campus">
             </div>
             <div class="content">
               <h3>Our campus</h3>
@@ -109,9 +111,9 @@
             </div>
           </div> <!-- End Block -->
 
-          <div class="aside-block">
+          <div class="block">
             <div class="image">
-              <img src="" alt="">
+              <img src="./img/information-guest-lecture.jpg" alt="Guest Lecture">
             </div>
             <div class="content">
               <h3>Our guest lecture</h3>
@@ -129,8 +131,6 @@
 
     <section id="online">
       <h2>Start Learning</h2>
-
-
 
         <div class="block">
           <div class="block-img">
@@ -209,15 +209,16 @@
         <h2>Thesis Exhibit</h2>
 
         <div class="feature-image">
-          <img src="" alt="">
+          <img src="./img/information-main.jpg" alt="Main Information">
+          <!-- <video src="./vid/thesis.mp4" autoplay poster="posterimage.jpg"></video> -->
           <h3>Reimagine Urban</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
         </div> <!-- End Feature -->
 
-        <div class="feature-aside">
-          <div class="aside-block">
+        <div class="feature-content">
+          <div class="block">
             <div class="image">
-              <img src="" alt="">
+              <img src="./img/thesis-fisma.jpg" alt="Thesis Fisma">
             </div>
             <div class="content">
               <h3>Fisma: Design & Prototype</h3>
@@ -225,9 +226,9 @@
             </div>
           </div> <!-- End Block -->
 
-          <div class="aside-block">
+          <div class="block">
             <div class="image">
-              <img src="" alt="">
+              <img src="./img/thesis-now-and-then.jpg" alt="Thesis Now and Then">
             </div>
             <div class="content">
               <h3>Now and then</h3>
