more css changes

--- a/index 2.html
+++ b/index 2.html
@@ -15,7 +15,7 @@
   <link rel="icon" href="images/favicon.png">
 
   <!-- Custom Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
 </head>
 
@@ -30,7 +30,7 @@
     <nav>
       <div class="logo">
         <img src="./img/ic-logo.svg" alt="Colmar Logo">
-        <span>Colmar<span class="alt">Academy</span></span>
+        <span>Colmar Academy</span>
       </div>
       <ul>
         <li>On Campus</li>
@@ -60,16 +60,16 @@
     Section - Banner
     -->
 
-    <section class="flex-wrap" id="banner">
+    <section id="banner">
 
-        <div class="feature-image">
+        <div class="banner-image">
           <img src="./img/banner.jpg" alt="Learn something new everyday">
         </div>
         <div class="banner-content">
             <div class="banner-block">
             <h1>Learn something new everyday</h1>
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-            <a class="btn" href="#">Start here</a>
+            <a class="btn" href="#">Start Here</a>
           </div>
         </div> <!-- End Feature -->
 
@@ -79,7 +79,7 @@
     Section - On Campus
     -->
 
-    <section class="flex-wrap" id="oncampus">
+    <section id="oncampus">
 
         <div class="feature-image">
           <img src="./img/information-main.jpg" alt="Main Information">
@@ -129,10 +129,10 @@
     Section - Online
     -->
 
-    <section class="flex-wrap" id="online">
+    <section id="online">
       <h2>Start Learning</h2>
 
-        <div class="grid-block">
+        <div class="block">
           <div class="block-img">
             <img src="./img/course-software.jpg" alt="">
           </div>
@@ -143,7 +143,7 @@
           </div>
         </div> <!-- End Block -->
 
-        <div class="grid-block">
+        <div class="block">
           <div class="block-img">
             <img src="./img/course-computer-art.jpg" alt="">
           </div>
@@ -154,7 +154,7 @@
           </div>
         </div> <!-- End Block -->
 
-        <div class="grid-block">
+        <div class="block">
           <div class="block-img">
             <img src="./img/course-design.jpg" alt="">
           </div>
@@ -165,7 +165,7 @@
           </div>
         </div> <!-- End Block -->
 
-        <div class="grid-block">
+        <div class="block">
           <div class="block-img">
             <img src="./img/course-data.jpg" alt="">
           </div>
@@ -176,7 +176,7 @@
           </div>
         </div> <!-- End Block -->
 
-        <div class="grid-block">
+        <div class="block">
           <div class="block-img">
             <img src="./img/course-business.jpg" alt="">
           </div>
@@ -187,7 +187,7 @@
           </div>
         </div> <!-- End Block -->
 
-        <div class="grid-block">
+        <div class="block">
           <div class="block-img">
             <img src="./img/course-marketing.jpg" alt="">
           </div>
@@ -205,14 +205,12 @@
     Section - For Companies
     -->
 
-    <section class="flex-wrap" id="for-companies">
+    <section id="for-companies">
         <h2>Thesis Exhibit</h2>
 
         <div class="feature-image">
-          <video width="" height="" controls>
-            <source src="./vid/thesis.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+          <img src="./img/information-main.jpg" alt="Main Information">
+          <!-- <video src="./vid/thesis.mp4" autoplay poster="posterimage.jpg"></video> -->
           <h3>Reimagine Urban</h3>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
         </div> <!-- End Feature -->
@@ -248,6 +246,7 @@
   -->
 
   <footer id="footer">
+    <div class="container">
 
       <span>2016 Colmar Academy. All rights reserved.</span>
       <ul>
@@ -255,6 +254,7 @@
         <li>Privacy</li>
       </ul>
 
+    </div> <!-- End Container -->
   </footer>
 
   <!-- Javascript -->
