--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
 
     <div class="nav-icons">
       <ul>
-        <li><img src="./img/ic-logo.svg" alt="Colmar Logo"></li>
-        <li><img src="./img/ic-on-campus.svg" alt="On Campus"></li>
-        <li><img src="./img/ic-online.svg" alt="Online"></li>
-        <li><img src="./img/ic-login.svg" alt="For Companies"></li>
+        <li><a href="#"><img src="./img/ic-logo.svg" alt="Colmar Logo"></a></li>
+        <li><a href="#oncampus"><img src="./img/ic-on-campus.svg" alt="On Campus"></a></li>
+        <li><a href="#online"><img src="./img/ic-online.svg" alt="Online"></a></li>
+        <li><a href="#for-companies"><img src="./img/ic-login.svg" alt="For Companies"></a></li>
+
       </ul>
     </div>
 
@@ -130,7 +131,7 @@
     -->
 
     <section class="flex-wrap" id="online">
-      <h2>Start Learning</h2>
+      <h2>Start learning</h2>
 
         <div class="grid-block">
           <div class="block-img">
@@ -206,7 +207,7 @@
     -->
 
     <section class="flex-wrap" id="for-companies">
-        <h2>Thesis Exhibit</h2>
+        <h2>Thesis exhibit</h2>
 
         <div class="feature-image">
           <video width="" height="" controls>
@@ -249,7 +250,7 @@
 
   <footer id="footer">
 
-      <span>2016 Colmar Academy. All rights reserved.</span>
+      <span>© 2016 Colmar Academy. All rights reserved.</span>
       <ul>
         <li>Terms</li>
         <li>Privacy</li>
