--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <title>Colmar Academy</title>
 
+  <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+
   <!-- Style Sheets -->
   <link href="./css/reset.css" type="text/css" rel="stylesheet">
   <link href="./css/style.css" type="text/css" rel="stylesheet">
@@ -27,25 +29,25 @@
 
   <header id="header">
 
-    <nav>
+    <nav role="navigation">
       <div class="logo">
         <img src="./img/ic-logo.svg" alt="Colmar Logo">
         <span>Colmar<span class="alt">Academy</span></span>
       </div>
       <ul>
-        <li>On Campus</li>
-        <li>Online</li>
-        <li>For Companies</li>
-        <li>Sign In</li>
+        <li><a href="#">On Campus</a></li>
+        <li><a href="#oncampus">Online</a></li>
+        <li><a href="#online">For Companies</a></li>
+        <li><a href="#for-companies">Sign In</a></li>
       </ul>
     </nav>
 
     <div class="nav-icons">
       <ul>
-        <li><a href="#"><img src="./img/ic-logo.svg" alt="Colmar Logo"></a></li>
-        <li><a href="#oncampus"><img src="./img/ic-on-campus.svg" alt="On Campus"></a></li>
-        <li><a href="#online"><img src="./img/ic-online.svg" alt="Online"></a></li>
-        <li><a href="#for-companies"><img src="./img/ic-login.svg" alt="For Companies"></a></li>
+        <li><a href="#"><img src="./img/ic-logo.svg" alt="Logo link"></a></li>
+        <li><a href="#oncampus"><img src="./img/ic-on-campus.svg" alt="On Campus link"></a></li>
+        <li><a href="#online"><img src="./img/ic-online.svg" alt="Online link"></a></li>
+        <li><a href="#for-companies"><img src="./img/ic-login.svg" alt="For Companies link"></a></li>
 
       </ul>
     </div>
@@ -55,22 +57,22 @@
   <!--
   Main
   -->
-  <main>
+  <main role="main">
 
     <!--
     Section - Banner
     -->
 
-    <section class="flex-wrap" id="banner">
+    <section class="flex-wrap" id="banner" role="banner">
 
         <div class="feature-image">
-          <img src="./img/banner.jpg" alt="Learn something new everyday">
+          <img src="./img/banner.jpg" alt="Learn something new image">
         </div>
         <div class="banner-content">
             <div class="banner-block">
             <h1>Learn something new everyday</h1>
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
-            <a class="btn" href="#">Start here</a>
+            <a class="btn" role="button" href="#">Start here</a>
           </div>
         </div> <!-- End Feature -->
 
@@ -83,7 +85,7 @@
     <section class="flex-wrap" id="oncampus">
 
         <div class="feature-image">
-          <img src="./img/information-main.jpg" alt="Main Information">
+          <img src="./img/information-main.jpg" alt="Main Information image">
           <h2>It doesn't hurt to keep practing</h2>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
           <span><br>Emanuel, Sr Strategist at Hiring.com</span>
@@ -92,34 +94,34 @@
         <div class="feature-content">
           <div class="block">
             <div class="image">
-              <img src="./img/information-orientation.jpg" alt="Orientation Date">
+              <img src="./img/information-orientation.jpg" alt="Orientation image">
             </div>
             <div class="content">
               <h3>Orientation date</h3>
               <p>Tues 10/11 & Wed 10/12: 8am-3pm</p>
-              <a class="primary-link" href="#">Read More</a>
+              <a class="primary-link" href="#" aria-label="read more about orientation">Read More</a>
             </div>
           </div> <!-- End Block -->
 
           <div class="block">
             <div class="image">
-              <img src="./img/information-campus.jpg" alt="Our Campus">
+              <img src="./img/information-campus.jpg" alt="Our Campus image">
             </div>
             <div class="content">
               <h3>Our campus</h3>
               <p>Find which campus is close by you</p>
-              <a class="primary-link" href="#">Read More</a>
+              <a class="primary-link" href="#" aria-label="read more about our campus">Read More</a>
             </div>
           </div> <!-- End Block -->
 
           <div class="block">
             <div class="image">
-              <img src="./img/information-guest-lecture.jpg" alt="Guest Lecture">
+              <img src="./img/information-guest-lecture.jpg" alt="Guest Lecture image">
             </div>
             <div class="content">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-              <a class="primary-link" href="#">Read More</a>
+              <a class="primary-link" href="#" aria-label="read more about our guest lecture">Read More</a>
             </div>
           </div> <!-- End Block -->
         </div> <!-- End Feature -->
@@ -221,7 +223,7 @@
         <div class="feature-content">
           <div class="block">
             <div class="image">
-              <img src="./img/thesis-fisma.jpg" alt="Thesis Fisma">
+              <img src="./img/thesis-fisma.jpg" alt="Thesis Fisma image">
             </div>
             <div class="content">
               <h3>Fisma: Design & Prototype</h3>
@@ -231,7 +233,7 @@
 
           <div class="block">
             <div class="image">
-              <img src="./img/thesis-now-and-then.jpg" alt="Thesis Now and Then">
+              <img src="./img/thesis-now-and-then.jpg" alt="Thesis Now and Then image">
             </div>
             <div class="content">
               <h3>Now and then</h3>
@@ -248,7 +250,7 @@
   Footer
   -->
 
-  <footer id="footer">
+  <footer id="footer" role="contentinfo">
 
       <span>© 2016 Colmar Academy. All rights reserved.</span>
       <ul>
