--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 
     <nav role="navigation">
       <div class="logo">
-        <img src="./img/ic-logo.svg" alt="Colmar Logo">
+        <a href="#"><img src="./img/ic-logo.svg" alt="Colmar Logo"></a>
         <span>Colmar<span class="alt">Academy</span></span>
       </div>
       <ul>
-        <li><a href="#">On Campus</a></li>
-        <li><a href="#oncampus">Online</a></li>
-        <li><a href="#online">For Companies</a></li>
-        <li><a href="#for-companies">Sign In</a></li>
+        <li><a href="#oncampus">On Campus</a></li>
+        <li><a href="#online">Online</a></li>
+        <li><a href="#for-companies">For Companies</a></li>
+        <li><a href="#">Sign In</a></li>
       </ul>
     </nav>
 
     <div class="nav-icons">
       <ul>
-        <li><a href="#"><img src="./img/ic-logo.svg" alt="Logo link"></a></li>
+        <li><a href="#"><img src="./img/ic-logo.svg" alt=" Colmar Logo link"></a></li>
         <li><a href="#oncampus"><img src="./img/ic-on-campus.svg" alt="On Campus link"></a></li>
         <li><a href="#online"><img src="./img/ic-online.svg" alt="Online link"></a></li>
         <li><a href="#for-companies"><img src="./img/ic-login.svg" alt="For Companies link"></a></li>
